RESOLVED FIXED155999
REGRESSION(r198784) Shouldn't add platform-dependent code to ScrollableArea.h
https://bugs.webkit.org/show_bug.cgi?id=155999
Summary REGRESSION(r198784) Shouldn't add platform-dependent code to ScrollableArea.h
Myles C. Maxfield
Reported 2016-03-29 17:36:18 PDT
REGRESSION(r198784) Shouldn't add platform-dependent code to ScrollableArea.h
Attachments
Patch (8.18 KB, patch)
2016-03-29 17:36 PDT, Myles C. Maxfield
sam: commit-queue+
Myles C. Maxfield
Comment 1 2016-03-29 17:36:45 PDT
Myles C. Maxfield
Comment 2 2016-03-29 18:24:50 PDT
Note You need to log in before you can comment on or make changes to this bug.