REGRESSION(r198784) Shouldn't add platform-dependent code to ScrollableArea.h https://bugs.webkit.org/show_bug.cgi?id=155999

Rolling out the patch.

* platform/ScrollableArea.h:
(WebCore::ScrollableArea::horizontalScrollbar):
(WebCore::ScrollableArea::verticalScrollbar):
(WebCore::ScrollableArea::tiledBacking):
(WebCore::ScrollableArea::layerForHorizontalScrollbar):
(WebCore::ScrollableArea::layerForVerticalScrollbar):
(WebCore::ScrollableArea::layerForScrolling):
(WebCore::ScrollableArea::layerForScrollCorner):
(WebCore::ScrollableArea::layerForOverhangAreas):
* platform/mac/ScrollAnimatorMac.mm:
(WebCore::ScrollAnimatorMac::updateScrollerStyle): Deleted.
* platform/mac/ScrollableAreaMac.mm:
(WebCore::ScrollableArea::setScrollbarLayoutDirection): Deleted.
* platform/mac/ScrollbarThemeMac.mm:
(WebCore::ScrollbarThemeMac::registerScrollbar): Deleted.
* platform/spi/mac/NSScrollerImpSPI.h:

Canonical link: https://commits.webkit.org/174116@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198817 268f45cc-cd09-0410-ab3c-d52691b4dbfc