Source/WebCore/platform/ScrollableArea.h
@@ -29,10 +29,6 @@
 #include "Scrollbar.h"
 #include <wtf/Vector.h>
 
-#if PLATFORM(COCOA)
-OBJC_CLASS NSScrollerImp;
-#endif
-
 namespace WebCore {
 
 class FloatPoint;
@@ -184,8 +180,8 @@ public:
     int verticalScrollbarIntrusion() const;
     WEBCORE_EXPORT IntSize scrollbarIntrusion() const;
 
-    virtual Scrollbar* horizontalScrollbar() const { return nullptr; }
-    virtual Scrollbar* verticalScrollbar() const { return nullptr; }
+    virtual Scrollbar* horizontalScrollbar() const { return 0; }
+    virtual Scrollbar* verticalScrollbar() const { return 0; }
 
     const IntPoint& scrollOrigin() const { return m_scrollOrigin; }
     bool scrollOriginChanged() const { return m_scrollOriginChanged; }
@@ -297,15 +293,15 @@ public:
     bool isPinnedVerticallyInDirection(int verticalScrollDelta) const;
 #endif
 
-    virtual TiledBacking* tiledBacking() const { return nullptr; }
+    virtual TiledBacking* tiledBacking() const { return 0; }
 
     // True if scrolling happens by moving compositing layers.
     virtual bool usesCompositedScrolling() const { return false; }
     // True if the contents can be scrolled asynchronously (i.e. by a ScrollingCoordinator).
     virtual bool usesAsyncScrolling() const { return false; }
 
-    virtual GraphicsLayer* layerForHorizontalScrollbar() const { return nullptr; }
-    virtual GraphicsLayer* layerForVerticalScrollbar() const { return nullptr; }
+    virtual GraphicsLayer* layerForHorizontalScrollbar() const { return 0; }
+    virtual GraphicsLayer* layerForVerticalScrollbar() const { return 0; }
 
     bool hasLayerForHorizontalScrollbar() const;
     bool hasLayerForVerticalScrollbar() const;
@@ -318,9 +314,6 @@ public:
 
     bool verticalScrollbarIsOnLeft() const;
     static bool systemLanguageIsRTL();
-#if PLATFORM(COCOA)
-    void setScrollbarLayoutDirection(NSScrollerImp *) const;
-#endif
 
 protected:
     WEBCORE_EXPORT ScrollableArea();
@@ -334,10 +327,10 @@ protected:
     virtual void invalidateScrollCornerRect(const IntRect&) = 0;
 
     friend class ScrollingCoordinator;
-    virtual GraphicsLayer* layerForScrolling() const { return nullptr; }
-    virtual GraphicsLayer* layerForScrollCorner() const { return nullptr; }
+    virtual GraphicsLayer* layerForScrolling() const { return 0; }
+    virtual GraphicsLayer* layerForScrollCorner() const { return 0; }
 #if ENABLE(RUBBER_BANDING)
-    virtual GraphicsLayer* layerForOverhangAreas() const { return nullptr; }
+    virtual GraphicsLayer* layerForOverhangAreas() const { return 0; }
 #endif
 
     bool hasLayerForScrollCorner() const;
