Source/WebCore/platform/mac/ScrollAnimatorMac.mm
@@ -1300,7 +1300,6 @@ void ScrollAnimatorMac::updateScrollerStyle()
 
         NSScrollerImp *oldVerticalPainter = [m_scrollerImpPair verticalScrollerImp];
         NSScrollerImp *newVerticalPainter = [NSScrollerImp scrollerImpWithStyle:newStyle controlSize:(NSControlSize)verticalScrollbar->controlSize() horizontal:NO replacingScrollerImp:oldVerticalPainter];
-        m_scrollableArea.setScrollbarLayoutDirection(newVerticalPainter);
 
         [m_scrollerImpPair setVerticalScrollerImp:newVerticalPainter];
         macTheme->setNewPainterForScrollbar(*verticalScrollbar, newVerticalPainter);
@@ -1317,7 +1316,6 @@ void ScrollAnimatorMac::updateScrollerStyle()
 
         NSScrollerImp *oldHorizontalPainter = [m_scrollerImpPair horizontalScrollerImp];
         NSScrollerImp *newHorizontalPainter = [NSScrollerImp scrollerImpWithStyle:newStyle controlSize:(NSControlSize)horizontalScrollbar->controlSize() horizontal:YES replacingScrollerImp:oldHorizontalPainter];
-        m_scrollableArea.setScrollbarLayoutDirection(newHorizontalPainter);
 
         [m_scrollerImpPair setHorizontalScrollerImp:newHorizontalPainter];
         macTheme->setNewPainterForScrollbar(*horizontalScrollbar, newHorizontalPainter);
